# hookyChecker

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  TODO.md  pyproject.toml
apps_script/: Code.gs
src/hooky_checker/: __init__.py  cli.py  config.py  dashboard.py  security.py
src/hooky_checker/adapters/: __init__.py  base.py  google_sheets.py
src/hooky_checker/alerts/: __init__.py  service.py
src/hooky_checker/api/: __init__.py  app.py
src/hooky_checker/checks/: __init__.py  comparison.py
src/hooky_checker/db/: __init__.py  models.py  session.py
src/hooky_checker/pipeline/: __init__.py  snapshot.py
src/hooky_checker/templates/: alert_detail.html  dashboard.html  performance_dashboard.html  source_detail.html
src/hooky_checker/ui/: app.py
tests/unit/: test_checks.py  test_config.py  test_dashboard.py  test_google_sheets.py  test_public_url.py  test_snapshot.py
